Add new binary files for extraction: 35.bin and 68.bin
- Added 35.bin (2982 KB) to the temp_bdata extract35 directory.
- Added 68.bin (42776 KB) to the temp_bdata extract68 directory.